@@ -1,3 +1,8 @@
+2005-07-13  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c: (totem_action_drop_files): sort the files before
+	pushing them to the playlist when dropping files (Closes: #310203)
+
 2005-07-13  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* configure.in:
